@@ -171,7 +171,7 @@ public class TwoPhaseHLSImple implements TwoPhaseHLS, UserCoordinatorService
         ensureContextInitialised();
         if (CONTEXT_IMPLE_CLASS != null) {
             try {
-                SOAPContext ctx = (SOAPContext) CONTEXT_IMPLE_CLASS.newInstance();
+                SOAPContext ctx = (SOAPContext) CONTEXT_IMPLE_CLASS.getDeclaredConstructor().newInstance();
 
                 ctx.initialiseContext(_coordManager.currentCoordinator());
 
